Minor update for  01_data_preprocessing

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -583,6 +583,16 @@
    "source": [
     "merged_df[merged_df['year'].isna()]['Class'].value_counts() / len(merged_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write final data for analysis\n",
+    "merged_df[~merged_df['year'].isna()].to_csv(final_output, index=False)"
+   ]
   }
  ],
  "metadata": {
